--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
-  {'couchbeam', ".*", {git, "https://github.com/benoitc/couchbeam.git", {tag, "0.9.3"}}
+  {'couchbeam', ".*", {git, "https://github.com/benoitc/couchbeam.git", {tag, "0.9.3"}}}
 ]}.
